src/Assets/css/styles.css
* {
    margin:0%;
    padding:0%;
    box-sizing: border-box;
}
    /* Light Theme */
:root {
    
    /*sektionsfärgerna kommenteras ut när allt är klart*/
    --_clr-primary:#6663F1;
    --_clr-bkg1:#33354D; /* sektionsfärg */
    --_clr-bkg2:#0B0F19; /* sektionsfärg */
    --_clr-black:black;
    --_clr-white:white;
    --_clr-green:#22C55E;
    --_clr-text: black;
    --_clr-togglebtn: rgba(0, 0, 0, 0.7);
    --_clr-apps: rgb(99, 102, 241, 0.08);
    --_clr-appshover: rgba(99, 102, 241, 0.15);
    --_clr-quotes:rgba(99, 102, 241, 0.08);
    --_clr-quoteshover:  rgba(99, 102, 241, 0.15);
    --_clr-contact: rgba(0, 0, 0, 0.2);
    --_clr-contacthover: rgba(0, 0, 0, 0.08);
    --_clr-subscribe:rgba(0, 0, 0, 0.08);
    --_clr-background: linear-gradient(to top, rgba(99, 102, 241, 0.1) 0%, rgba(218, 70, 239, 0.05) 42%, rgba(241, 244, 253, 0.07) 83%), #ffffff;

    --container-padding: 1rem;
    --transition-time: all 0.3s;    
}
    /* Dark Theme */
 :root.dark-theme {

    --_clr-primary:#6663F1;
    --_clr-bkg1:#33354D; /* sektionsfärg */
    --_clr-bkg2:#0B0F19; /* sektionsfärg */
    --_clr-black:black;
    --_clr-white:white;
    --_clr-green:#22C55E;
    --_clr-text: white;
    --_clr-togglebtn: rgb(255, 255, 255, .5);
    --_clr-apps: white;
    --_clr-appshover: rgb(211, 211, 211);
    --_clr-quotes:rgb(51, 53, 77, 0.5);
    --_clr-quoteshover:  #565c92;
    --_clr-contact: rgba(255, 255, 255, 0.5);
    --_clr-contacthover: #33354D;
    --_clr-subscribe: rgb(255, 255, 255, 0.08);
    --_clr-background: linear-gradient(to top, rgba(99, 102, 241, 0.1) 0%, rgba(218, 70, 239, 0.05) 42%, rgba(241, 244, 253, 0.07) 83%), #0b0f19;


    --container-padding: 1rem;
    --transition-time: all 0.3s;    

}

body {
    font-family: Manrope;
    color: var(--_clr-text);
    background: var(--_clr-background);
    min-width: 1900px;
    max-width: 1920px;
}
/* #first-page {
     Satte bakgrundsfärger på varje sektion för att lättare kunna se
    vart allt börjar och slutar för varje del.
     background-color: var(--_clr-bkg1);
} */
.toppen {
    padding-top: 1rem;
    padding-left: 20%;
    padding-right: 20%;
    gap:2rem;
    display: grid;
    grid-template-columns:auto 1fr auto auto;
    justify-content: center;
    align-items: center;
}

.silicon-image {
    margin-top: 2.5px;
}
.silicon {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}
.silicon-text {
    font-size: 1.5rem;
    font-weight: bold;
}
a {
    text-decoration: none;
    color: var(--_clr-text);
}
p {
    color: var(--_clr-text);
}

a:hover {
    color: rgb(211, 211, 211);
}
.button {
    font-family: Manrope;
    font-size: 1rem;
    font-weight: 500;
    color: var(--_clr-text)
}
.feat {
    margin-top: 7px;
    font-weight: 300;
    display: flex;
    gap: 2rem;
}
.switch {
    --_w: 40px;
    --_h: 20px;

    margin-top: 7px;
    margin-right: 2rem;
    position: relative;
    display: inline-block;
    width: var(--_w);
    height: var(--_h);
}
.Label {
    color: var(--_clr-togglebtn);
    margin-right: 10px;
}
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}
.slider:before {
    position: absolute;
    content: "";
    height: 95%;
    width: 47.5%;
    left: 1px;
    right: 1px;
    bottom: 1px;

    background-color: var(--_clr-white);
    -webkit-transition: .4s;
    transition: .4s;
}
input:checked + .slider {
    background-color: var(--_clr-primary);
}
input:focus + .slider {
    box-shadow: 0 0 2px var(--_clr-primary) ;
}
input:checked + .slider:before {
    -webkit-transform: translateX(20px);
    -ms-transform: translateX(20px);
    transform: translateX(20px);
}
.slider.round {
    border-radius: 10px;
}  
.slider.round:before {
    border-radius: 10px;
}

.btn-gubbe {
    margin-top: 7px;
    max-width: 170px;
    color: var(--_clr-white);
    background-color: var(--_clr-primary);
    border-radius: 8px;
    padding: 0.6rem 2rem;
}
.btn-gubbe:hover {
    background-color: #7573f1;
}
.btn-gubbe i {
    margin-right: 10px;
}

.bottom-of-page-1 {
    padding-top: 6rem;
    padding-left: 20%;
    padding-right: 20%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: "text phones";
    /* justify-content: center;
    align-items: center; */
}
.text-knappar {
    grid-area: text;
    text-align: left;
}
.headline {
    font-size: 2.4rem;
    font-weight: 900;
    text-align: left;
}
.bread {
    margin-top: 2rem;
    font-weight: 100;
}
.phones {
    margin-right: 1rem;
    grid-area: phones;
}
.downloads {
    display: flex;
    margin-top: 2rem;
    gap: 2rem;

}
.btn-apple {
    background-color: var(--_clr-apps);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    padding-top: 0.6rem;
    padding-left: 1.2rem;
    padding-right: 1.2rem;
}
.btn-apple:hover {
    background-color: var(--_clr-appshover);
}
.btn-google {
    background-color: var(--_clr-apps);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    padding-top: 0.6rem;
    padding-left: 1.2rem;
    padding-right: 1.2rem;
}
.btn-google:hover {
    background-color: var(--_clr-appshover);
}
.discover {
    margin-top: 20rem;
}
.discover-text {
    margin-left: 0.5rem;
}
/* #second-page {
    background-color: var(--_clr-bkg2) 
} */
.logos {
    /* max-width: 1320px; */
    padding-top: 8rem;
    margin-left: 20%;
    margin-right: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.logos-border {
    /* padding: 2rem; */
    height: 6rem;
    width: 11rem;
    margin-left: .5rem;
    margin-right: .5rem;
    display: grid;
    align-items: center;
    justify-content: center;
    border: solid 1px var(--_clr-quotes); 
    border-radius: 10px;
}
.logos-images {
    padding: 2rem;
}
/* ... */

